<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.computerxpert.receptek.SetupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:text="@string/title_setup_prg"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_gallery"
            android:text="@string/txt_setup_tip"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="73dp"
            tools:style="@android:style/Widget.ListView.Menu" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_gallery"
            android:text="@string/txt_setup_csop"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="143dp"
            tools:style="@android:style/Widget.ListView.Menu" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_share"
            android:text="@string/txt_setup_shared"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="211dp"
            tools:style="@android:style/Widget.ListView.Menu" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_manage"
            android:text="@string/txt_setup_inact"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="16dp"
            tools:style="@android:style/Widget.ListView.Menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:text="@string/title_setup_rcpt"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:textSize="24sp"
            tools:style="@android:style/Widget.ListView.Menu" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_slideshow"
            android:text="@string/txt_setup_bckp"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_send"
            android:text="@string/txt_setup_lang"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginVertical="?android:attr/actionBarSize"
            android:addStatesFromChildren="false"
            android:background="?android:attr/windowBackground"
            android:isScrollContainer="false"
            android:paddingHorizontal="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation">

        </android.support.design.widget.BottomNavigationView>
    </LinearLayout>



    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
    -->
</android.support.constraint.ConstraintLayout>
